--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,8 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 .DS_Store
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
