added user input for save directory

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     implementation 'commons-io:commons-io:2.11.0'
 }
 
+run {
+    standardInput = System.in
+}
+
 application {
     // Define the main class for the application.
     mainClass = 'com.dulitha.DownloadSite'
